tests/ui/once_ttl_unparseable_duration.stderr
error: unable to parse `ttl` as a Duration expression: cannot parse string into token stream; `ttl` takes a `Duration` expression as a string literal, e.g. `ttl = "core::time::Duration::from_secs(60)"`
 --> tests/ui/once_ttl_unparseable_duration.rs:3:14
  |
3 | #[once(ttl = "core::time::Duration::from_secs(")]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
